--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
 		"chai-http": "^3.0.0",
 		"mocha": "^3.2.0",
 		"zombie": "^5.0.5",
-		"helmet": "^3.1.0",
-    "regex":"0.1.1"
+		"helmet": "^3.1.0"
 	},
 	"engines": {
 		"node": "10.0.0"
